<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Practicacontactos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Ingresar">BotonIngresar</string>
    <string name="user">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="title_activity_contactos">ContactosActivity</string>
    <string name="IngresarNuevoContacto">Ingresar Nuevo Contacto</string>
    <string name="title_activity_nuevo_contacto">NuevoContactoActivity</string>
    <string name="phone">Telefono</string>
    <string name="Nombre">Nombre</string>
    <string name="Telefono">Telefono</string>
    <string name="Direccion">Direccion</string>
    <string name="ingresar">Ingresar</string>
    <string name="city">Cuidad</string>
    <string name="Correo">Correo Electronio</string>

</resources>
